Add options for different stacking types